k8s/namespace-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proctorshield
  labels:
    name: proctorshield
    environment: production
